# tmhc

./: .gitignore  .pre-commit-config.yaml  ASSETS.md  CMakeLists.txt  Makefile  PACKETS.md  README.md  checksum.sha1  classes.txt  configure.py  diff_settings.py  extract_byte_source_offsets.sh  objdiff.json  ps2toolchain.cmake  requirements.txt
config/: symbol_addrs.txt  tmhc.yaml  undefined_syms.txt
docs/: ASSETS.md  CLASSES.md  CONTRIBUTING.md  FAQ.md  NAMED_DEBUG_PIPES.md  classes.txt
include/: NotImplementedException.h  common.h  common_funcs.h  common_types.h  include_asm.h  labels.inc  macro.inc
include/gcc/: _G_config.h  _ansi.h  ieeefp.h  malloc.h  math.h  setjmp.h  stdio.h  stdlib.h  time.h
include/gcc/gcc-lib/: new  stdarg.h  stddef.h  typeinfo
include/gcc/machine/: fastmath.h  ieeefp.h  time.h  types.h
include/gcc/sys/: reent.h  resource.h  signal.h  stat.h  types.h  wait.h
include/sdk/: README.md  csl.h  cslmidi.h  cslpcm.h  cslse.h  ilink.h  ilsock.h  ilsocksf.h  libcdvd.h  libver.h  modhsyn.h  modmsin.h  modsein.h  netcnfif.h  sceerr.h  sceerrno.h  sdhd.h  sdmacro.h  sdrcmd.h  sdsq.h  spucodec.h
include/sdk/Old/: rspu2cmd.h
include/sdk/ee/: eenet46.h  libdbc.h  libeyetoy.h  libhttps.h  libmc.h  libmc2.h  libusbpspcm.h  ntgui2.h
include/tmhc/: Car.h  CarWeap.h  FileMgr.h  Interactive.h  McFileInfo.h  McTask.h  Slink.h  TMSlink.h  Widget.h  actionDispatch.h  hd.h  mathf.h  tmhc_common.h  weap.h
progress/: tmhc_progress.json  total_progress.json
src/tmhc/: FileMgr.cpp  McFileInfo.cpp  Slink.cpp  Strings.cpp  TMSlink.cpp  main.cpp  mathf.cpp  weap.cpp
tools/: diff.py  elf_patcher.py  objdiff_config.yaml  objdiff_generate.py  report_progress.py
tools/splat_ext/: linkonce.py
tools/wibo-0.6.14/: wibo
(+6 files in other folders)
